--- a/you-kan.UI/ClientApp/src/app/sprints/components/sprint-detail.component.html
+++ b/you-kan.UI/ClientApp/src/app/sprints/components/sprint-detail.component.html
@@ -1,27 +1,29 @@
-<h3 mat-dialog-title>Create New Sprint</h3>
-<mat-dialog-content>
-    <form [formGroup]="sprintForm">
-        <mat-form-field class="basic-input">
-            <mat-label>Name</mat-label>
-            <input matInput formControlName="name" />
-        </mat-form-field>
-        <mat-form-field class="basic-input">
-            <mat-label>Project</mat-label>
-            <mat-select formControlName="type">
-                @for (currentProject of currentProject; track currentProject) {
-                <mat-option [value]="currentProject.value">{{currentProject.name}}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field class="start-date">
-            <mat-label>Start Date</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="start-date" />
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-    </form>
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button (click)="cancel()">Cancel</button>
-    <button mat-button cdkFocusInitial (click)="submit()">Create</button>
-</mat-dialog-actions> 
+<div>
+    <h2 mat-dialog-title>{{ data.sprint ? 'Edit' : 'Add' }} Sprint</h2>
+    <mat-dialog-content>
+        <form [formGroup]="sprintForm">
+            <mat-form-field class="basic-input">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="sprint_name" />
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Start Date</mat-label>
+                <input matInput [matDatepicker]="startPicker" formControlName="start_date"
+                    (dateChange)="updateEndDate()">
+                <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+                <mat-datepicker #startPicker></mat-datepicker>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>End Date</mat-label>
+                <input matInput [matDatepicker]="endPicker" formControlName="end_date">
+                <mat-datepicker-toggle matSuffix [for]="endPicker" disabled></mat-datepicker-toggle>
+                <mat-datepicker #endPicker disabled></mat-datepicker>
+            </mat-form-field>
+        </form>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-button (click)="onCancel()">Cancel</button>
+        <button mat-button cdkFocusInitial (click)="onSubmit()" [disabled]="sprintForm.invalid">
+            {{ data.sprint ? 'Update' : 'Create' }}</button>
+    </mat-dialog-actions>
